cc: Disable decoding of PaintRecord shaders in cc.

For PaintRecord backed shaders, skia performs the rasterization of the
shader's record at the required scale before tiling. In order to decode
images in these records using cc's decode cache, we create a temporary
SkPicture with images replaced with decodes from cc's cache and use
that in a new SkPictureShader each time the PaintShader is rasterized.

Skia internally maintains a cache of rasterized pictures used in these
shaders, keyed on the SkPictureShader's uniqueID. Since a new
SkPictureShader is created for each raster call, we don't get a cache
hit in skia and end up re-rasterizing the shader's record.

The ideal solution for this would be to maintain a PaintShaderCache
which caches rasterized records. But given the rarity of these cases,
its not worth duplicating skia's picture cache. However, if any of
the images in these records are animated, they must go through cc's
decode stack to update them and use cached animation frames. The
change ensures that we only decode shaders in cc if they have animated
images. Note that the performance hit of re-rasterization of records
in these cases will still exist.

R=chrishtr@chromium.org, enne@chromium.org, ericrk@chromium.org

Bug: 817640
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ibd1f3db9902f21fca20c99be1cf9e36b54cd7085
Reviewed-on: https://chromium-review.googlesource.com/952529
Commit-Queue: Khushal <khushalsagar@chromium.org>
Reviewed-by: Eric Karl <ericrk@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542570}
Former-commit-id: 058b6774e4b0191372be43b68bf5aaa2418b829e