cc/paint/scoped_raster_flags_unittest.cc
@@ -54,6 +54,7 @@ TEST(ScopedRasterFlagsTest, KeepsDecodesAlive) {
   auto record_shader = PaintShader::MakePaintRecord(
       record, SkRect::MakeWH(100, 100), SkShader::TileMode::kClamp_TileMode,
       SkShader::TileMode::kClamp_TileMode, &SkMatrix::I());
+  record_shader->set_has_animated_images();
 
   MockImageProvider provider;
   PaintFlags flags;
